err/trafaret.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/trafaret'...
Compiling './lib/python3.5/site-packages/trafaret/async.py'...
***   File "./lib/python3.5/site-packages/trafaret/async.py", line 176
    yield (
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/trafaret/contrib'...
Compiling './lib/python3.5/site-packages/trafaret/keys.py'...
***   File "./lib/python3.5/site-packages/trafaret/keys.py", line 12
    yield first, t.DataError(error=f'correct only if {second} is not defined'), (first,)
                                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trafaret-1.0.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
